fix japanese tabs wrapping

--- a/src/styles/partials/_tabs.scss
+++ b/src/styles/partials/_tabs.scss
@@ -14,6 +14,7 @@
         font-size: 1.1em;
         border: 2px solid transparent;
         border-bottom: 0;
+        white-space: nowrap;
 
         &:hover, &.active:hover {
             background-color: var(--active);
